<resources>
    <string name="app_name">Bloomi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_code">Enter code</string>
    <string name="send_code_again">Send code again</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_name">Your Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_bithday">Your Bithday</string>
    <string name="_01_may_2022">01 May 2022</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="bloomi">Bloomi</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log In</string>
    <string name="my_messages">My Messages</string>
    <string name="_3_new_messages">3 new messages</string>
    <string name="search_here">Search here</string>
    <string name="notifications">Notifications</string>
    <string name="create_a_password">Create a PassWord</string>
    <string name="re_password">Re_PassWord</string>
    <string name="ngo_trieu_vi">ngo trieu vi</string>
    <string name="_10">10</string>
    <string name="name">name</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dat_nguyen">Dat Nguyen</string>
    <string name="anh_dat_dep_trai_qua">Anh Dat dep trai qua</string>
    <string name="yesterday">Yesterday</string>
    <string name="try_again">Try again</string>
    <string name="we_can_help_you_log_into_your_account_if_you_ve_forgotten_your_password">We can help you log into your account if you’ve forgotten your password.</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="baotridthoai_dky">Phone number is under maintenance, please register by email !</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="what_s_happening">What\'s happening</string>
    <string name="feeling">Feeling</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="post_bloom">Post Bloom</string>
    <string name="add_account">Add Account</string>
    <string name="logout">Logout</string>
    <string name="select_album">Select Album</string>
    <string name="type_something">Type something ...</string>
    <string name="a_code_has_been_sent_to_your_email_or_phone_enter_that_code_here">A code has been sent to your email or phone. Enter that code here.</string>
    <string name="likes_your_photo">likes your photo.</string>
    <string name="continue_as_google">Continue as Google</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="everyone">Everyone</string>
    <string name="logic_will_get_you_from_a_to_b_imagination_will_take_you_everywhere">“Logic will get you from A to B. Imagination will take you everywhere.”</string>
    <string name="profile">Profile</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="my_friend">My Friend</string>

</resources>