<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="296dp"
    android:layout_height="232dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_layout"
    android:elevation="10dp"
    >
    <TextView
        android:id="@+id/d_forgotPassword_didYouForgot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:textColor="@color/black"
        android:text="@string/did_you_forget_your_password"
        android:textSize="15sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        />
    <TextView
        android:id="@+id/d_forgotPassword_weCanHelp"
        app:layout_constraintTop_toBottomOf="@id/d_forgotPassword_didYouForgot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_width="196dp"
        android:layout_height="30dp"
        android:textColor="@color/black"
        android:text="@string/we_can_help_you_log_into_your_account_if_you_ve_forgotten_your_password"
        android:textSize="10sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        tools:ignore="SmallSp" />
    <TextView
        android:id="@+id/d_forgotPassword_lineUp"
        app:layout_constraintTop_toBottomOf="@id/d_forgotPassword_weCanHelp"
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_height="1dp"
        android:background="#dedede"/>

    <TextView
        android:id="@+id/d_forgotPassword_forgotPassword"
        app:layout_constraintTop_toBottomOf="@id/d_forgotPassword_lineUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:textColor="#7f00ff"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        />

    <TextView
        android:id="@+id/d_forgotPassword_lineDown"
        app:layout_constraintTop_toBottomOf="@id/d_forgotPassword_forgotPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="9dp"
        android:layout_height="1dp"
        android:background="#dedede"/>
    <TextView
        android:id="@+id/d_forgotPassword_tryAgain"
        app:layout_constraintTop_toBottomOf="@id/d_forgotPassword_lineDown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:textColor="#7f00ff"
        android:text="@string/try_again"
        android:textSize="15sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        />
</androidx.constraintlayout.widget.ConstraintLayout>