<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/white"
    android:weightSum="10.5">

    <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/message_image"
    android:layout_width="0dp"
    android:layout_height="40dp"
        android:layout_weight="2"
    android:layout_gravity="top"
        android:layout_marginTop="15dp"
    android:src="@drawable/avatar_test"
    app:civ_border_width="3dp" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="10"
        tools:ignore="RtlSymmetry">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="19dp"
            android:weightSum="5"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name_Message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/dat_nguyen"
                android:gravity="bottom|start"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/time_Message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/yesterday"
                android:textColor="#B8B5B5"
                android:textStyle="bold"
                android:textSize="15sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/message_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:maxLines="2"
            android:text="@string/anh_dat_dep_trai_qua"
            android:textColor="#717171"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp" />
        <TextView
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:background="#151313"/>

    </LinearLayout>



</LinearLayout>