<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LogIn"
    android:background="@drawable/gradient_background"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
    >
        <LinearLayout
            android:id="@+id/LogIn_AppName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="162dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="@string/bloomi"
                android:textSize="60sp"
                android:gravity="center"
                android:fontFamily="@font/fs_playlist"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LogIn_EmailLayout"
            app:layout_constraintTop_toBottomOf="@id/LogIn_AppName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LogIn_Email"
                android:background="@drawable/input_border"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:textCursorDrawable="@null"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LogIn_PasswordLayout"
            app:layout_constraintTop_toBottomOf="@id/LogIn_EmailLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:elevation="10dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LogIn_Password"
                android:background="@drawable/input_border"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword|textNoSuggestions"
                android:hint="@string/password"

                android:textSize="15sp"
                android:textColor="@color/text_black"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/LogIn_ForgotPassword"
            app:layout_constraintTop_toBottomOf="@id/LogIn_PasswordLayout"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="22dp"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:textColor="@color/usual_color"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            />
        <LinearLayout
            android:id="@+id/LogIn_LogInLayout"
            app:layout_constraintTop_toBottomOf="@id/LogIn_ForgotPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="22dp"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:background="@drawable/big_button_white"
            android:elevation="10dp"
            >
            <TextView
                android:id="@+id/LogIn_LogIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_black"
                android:text="@string/log_in"
                android:textSize="15sp"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LogIn_or"
            app:layout_constraintTop_toBottomOf="@id/LogIn_LogInLayout"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:weightSum="13"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/or"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LogIn_SignInWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LogIn_or">

            <LinearLayout
                android:id="@+id/LogIn_SignInWithGoogle"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:background="@drawable/circle_icon_white"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/google_icon"/>
            </LinearLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/LogIn_SignInWithGithub"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:background="#00FFFFFF"
                android:src="@drawable/github_icon"
                android:contentDescription="TODO" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogIn_SignInWith"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/don_t_have_an_account"
                android:textColor="#788095"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/LogIn_CreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_vertical"
                android:text="@string/sign_up"
                android:textColor="@color/usual_color"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/fragment_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>