<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.menu_profile"
    android:background="@color/white"
    >

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/f_back_to_Me"
        android:layout_width="29dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/f_menu_NameACC"
        android:layout_width="303dp"
        android:layout_height="36dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/f_back_to_Me"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_back_to_Me" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="328dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:background="#F5F7FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:text="@string/male"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/f_menu_gender"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/f_menu_gender"
            android:layout_width="148dp"
            android:layout_height="23dp"
            android:text="@string/male"
            app:layout_constraintBottom_toTopOf="@+id/f_menu_birthday"
            app:layout_constraintEnd_toStartOf="@+id/f_update_gender"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="68dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="Birthday"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/f_menu_birthday"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/f_menu_birthday"
            android:layout_width="148dp"
            android:layout_height="23dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/_01_may_2022"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/f_menu_update_brithday" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="69dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:text="Address"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="148dp"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:text="Null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <ImageView
            android:id="@+id/f_update_gender"
            android:layout_width="23dp"
            android:layout_height="31dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_next"
            app:layout_constraintBottom_toTopOf="@+id/f_menu_update_brithday"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="23dp"
            android:layout_height="31dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_menu_update_brithday"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/f_menu_update_brithday"
            android:layout_width="23dp"
            android:layout_height="29dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/icon_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/f_Update_Profile_Picture"
        android:layout_width="275dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/update_profile_picture"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <TextView
        android:id="@+id/f_Update_Bio"
        android:layout_width="275dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Update Bio"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_Update_Cover" />

    <TextView
        android:id="@+id/f_Update_Cover"
        android:layout_width="275dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Update Cover"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_Update_Profile_Picture" />
</androidx.constraintlayout.widget.ConstraintLayout>